--- a/styles.css
+++ b/styles.css
@@ -518,8 +518,17 @@ html, body {
 }
 
 /* Inputs de Gestión de Datos */
+#clearDatabaseButton {
+    font-size: 1.15rem;
+  padding: 12px 16px;
+  margin-bottom: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  width: 30%;
+  box-sizing: border-box;
+  color: #ffffff;
+}
 #importButton,
-#clearDatabaseButton,
 #addCollaboratorForm input[type="text"] {
   font-size: 1.15rem;
   padding: 12px 16px;
@@ -528,7 +537,7 @@ html, body {
   border: 1px solid #ccc;
   width: 30%;
   box-sizing: border-box;
-  color: #ffffff;
+  color: #000000;
 }
 
 /* Input de Mes de Conciliación */
