--- a/styles.css
+++ b/styles.css
@@ -2163,21 +2163,9 @@ input[type="month"] {
     align-items: center;
 }
 
-.spinner-star:nth-child(1) {
+.spinner-star {
     animation-delay: 0s;
     font-size: 80px;
-}
-
-.spinner-star:nth-child(2) {
-    animation-delay: 0.2s;
-    animation-duration: 1.2s;
-    font-size: 60px;
-}
-
-.spinner-star:nth-child(3) {
-    animation-delay: 0.4s;
-    animation-duration: 1.4s;
-    font-size: 40px;
 }
 
 .loading-message {
